fix: Aligned JsoValue with TitleRow in doc and diff modes

--- a/packages/api-doc-viewer/src/components/JsoViewer/styles/JsoPropertyNodeViewer.css
+++ b/packages/api-doc-viewer/src/components/JsoViewer/styles/JsoPropertyNodeViewer.css
@@ -6,5 +6,4 @@
 
 .jso-property .subheader {
   font-size: 12px;
-  padding-bottom: 2px;
 }
