--- a/packages/api-doc-viewer/src/components/JsoViewer/styles/JsoValue.css
+++ b/packages/api-doc-viewer/src/components/JsoViewer/styles/JsoValue.css
@@ -1,11 +1,10 @@
 .jso-value {
   font-size: 12px;
-  padding-bottom: 2px;
 }
 
 .jso-value.text {
   font-size: 12px;
-  padding-bottom: 2px;
+  padding: 4px 0;
   color: rgb(100, 116, 139);
 }
 
